; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_debugfs.c_debugfs_valid_mountpoint.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_debugfs.c_debugfs_valid_mountpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.statfs = type { i64 }

@ENOENT = common dso_local global i32 0, align 4
@DEBUGFS_MAGIC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @debugfs_valid_mountpoint(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.statfs, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @statfs(i8* %5, %struct.statfs* %4)
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @ENOENT, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = getelementptr inbounds %struct.statfs, %struct.statfs* %4, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @DEBUGFS_MAGIC, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %11
  %17 = load i32, i32* @ENOENT, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %16, %8
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i64 @statfs(i8*, %struct.statfs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
